--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: xpad-noone-dkms
+Source: xpad-noone
 Section: games
 Priority: optional
 Maintainer: Ward Nakchbandi <hotrod.master@hotmail.com>
